book: update az
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/az/v2/Appendix-C:-Git-Əmrləri-Quraşdırma-və-Konfiqurasiya.html
+++ b/external/book/content/book/az/v2/Appendix-C:-Git-Əmrləri-Quraşdırma-və-Konfiqurasiya.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Appendix-C:-Git-Əmrləri-Layihələrin-Alınması-və-Yaradılması
 title: Git - Quraşdırma və Konfiqurasiya
 url: "/book/az/v2/Appendix-C:-Git-Əmrləri-Quraşdırma-və-Konfiqurasiya.html"
+aliases:
+- "/book/az/commands.html"
+- "/book/az/v1/commands.html"
 ---
 <p>Kitab boyunca onlarla Git əmrini təqdim etdik və hekayəyə yavaş-yavaş daha çox əmr əlavə edərək bir hekayə daxilində tətbiq etmək üçün çox çalışdıq.
 Lakin əmrlərin istifadəsi nümunələri bu kitabda bir qədər səpələnmiş formadadır.</p><p>Bu əlavədə kitab boyunca müraciət etdiyimiz bütün Git əmrlərini istifadə etdikləri şeylərə görə qruplaşdıraraq nəzərdən keçirəcəyik.
