--- a/external/book/content/book/az/v2/Başlanğıc-Git-Nədir?.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Git-Nədir?.html
@@ -19,6 +19,8 @@ title: Git - Git Nədir?
 url: "/book/az/v2/Başlanğıc-Git-Nədir?.html"
 aliases:
 - "/book/az/v2/Başlanğıc-Git-Nədir.html"
+- "/book/az/Başlanğıc-Git-Basics.html"
+- "/book/az/v1/Başlanğıc-Git-Basics.html"
 ---
 <h2 id="_git_nədir">Git Nədir?</h2>
 <div class="paragraph">
