--- a/external/book/content/book/az/v2/Başlanğıc-Git’i-Quraşdırmaq.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Git’i-Quraşdırmaq.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Başlanğıc-İlk-Dəfə-Git-Quraşdırması
 title: Git - Git’i Quraşdırmaq
 url: "/book/az/v2/Başlanğıc-Git’i-Quraşdırmaq.html"
+aliases:
+- "/book/az/Başlanğıc-Installing-Git.html"
+- "/book/az/v1/Başlanğıc-Installing-Git.html"
 ---
 <h2 id="_giti_quraşdırmaq">Git’i Quraşdırmaq</h2>
 <div class="paragraph">
