--- a/external/book/content/book/az/v2/Başlanğıc-Git’in-Qısa-Hekayəsi.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Git’in-Qısa-Hekayəsi.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Başlanğıc-Git-Nədir%3F
 title: Git - Git’in Qısa Hekayəsi
 url: "/book/az/v2/Başlanğıc-Git’in-Qısa-Hekayəsi.html"
+aliases:
+- "/book/az/Başlanğıc-A-Short-History-of-Git.html"
+- "/book/az/v1/Başlanğıc-A-Short-History-of-Git.html"
 ---
 <h2 id="_gitin_qısa_hekayəsi">Git’in Qısa Hekayəsi</h2>
 <div class="paragraph">
