--- a/external/book/content/book/az/v2/Başlanğıc-Kömək-Almaq.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Kömək-Almaq.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Başlanğıc-Qısa-Məzmun
 title: Git - Kömək Almaq
 url: "/book/az/v2/Başlanğıc-Kömək-Almaq.html"
+aliases:
+- "/book/az/Başlanğıc-Getting-Help.html"
+- "/book/az/v1/Başlanğıc-Getting-Help.html"
 ---
 <h2 id="_git_help">Kömək Almaq</h2>
 <div class="paragraph">
