--- a/external/book/content/book/az/v2/Başlanğıc-Versiyaya-Nəzarət-Haqqında.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Versiyaya-Nəzarət-Haqqında.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Başlanğıc-Git’in-Qısa-Hekayəsi
 title: Git - Versiyaya Nəzarət Haqqında
 url: "/book/az/v2/Başlanğıc-Versiyaya-Nəzarət-Haqqında.html"
+aliases:
+- "/book/az/Başlanğıc.html"
+- "/book/az/v1/Başlanğıc.html"
+- "/book/az/Başlanğıc-About-Version-Control.html"
+- "/book/az/v1/Başlanğıc-About-Version-Control.html"
 ---
 <p>Bu fəsil Git ilə işə başlamaq haqqındadır.
 Versiya nəzarət alətləri ilə əlaqəli bəzi məlumatları izah etməyə başlayacağıq, sonra Git’in sisteminizdə necə işlədiləcəyinə və nəhayət işə başlamaq üçün necə qurulacağına nəzərdən keçirəcəyik.
