--- a/external/book/content/book/az/v2/Başlanğıc-İlk-Dəfə-Git-Quraşdırması.html
+++ b/external/book/content/book/az/v2/Başlanğıc-İlk-Dəfə-Git-Quraşdırması.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Başlanğıc-Kömək-Almaq
 title: Git - İlk Dəfə Git Quraşdırması
 url: "/book/az/v2/Başlanğıc-İlk-Dəfə-Git-Quraşdırması.html"
+aliases:
+- "/book/az/Başlanğıc-First-Time-Git-Setup.html"
+- "/book/az/v1/Başlanğıc-First-Time-Git-Setup.html"
 ---
 <h2 id="_first_time">İlk Dəfə Git Quraşdırması</h2>
 <div class="paragraph">
