--- a/external/book/content/book/az/v2/Git-Alətləri-Alt-Modullar.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Alt-Modullar.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-Bundling
 title: Git - Alt Modullar
 url: "/book/az/v2/Git-Alətləri-Alt-Modullar.html"
+aliases:
+- "/book/az/Git-Tools-Submodules.html"
+- "/book/az/v1/Git-Tools-Submodules.html"
 ---
 <h2 id="_git_submodules">Alt Modullar</h2>
 <div class="paragraph">
