--- a/external/book/content/book/az/v2/Git-Alətləri-Git-ilə-Debugging.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Git-ilə-Debugging.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-Alt-Modullar
 title: Git - Git ilə Debugging
 url: "/book/az/v2/Git-Alətləri-Git-ilə-Debugging.html"
+aliases:
+- "/book/az/Git-Tools-Debugging-with-Git.html"
+- "/book/az/v1/Git-Tools-Debugging-with-Git.html"
 ---
 <h2 id="_git_ilə_debugging">Git ilə Debugging</h2>
 <div class="paragraph">
