--- a/external/book/content/book/az/v2/Git-Alətləri-Interaktiv-Səhnələşdirmə.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Interaktiv-Səhnələşdirmə.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-Stashing-və-Təmizləmə
 title: Git - Interaktiv Səhnələşdirmə
 url: "/book/az/v2/Git-Alətləri-Interaktiv-Səhnələşdirmə.html"
+aliases:
+- "/book/az/Git-Tools-Interactive-Staging.html"
+- "/book/az/v1/Git-Tools-Interactive-Staging.html"
 ---
 <h2 id="_interactive_staging">Interaktiv Səhnələşdirmə</h2>
 <div class="paragraph">
