--- a/external/book/content/book/az/v2/Git-Alətləri-Reviziya-Seçimi.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Reviziya-Seçimi.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git-Alətləri-Interaktiv-Səhnələşdirmə
 title: Git - Reviziya Seçimi
 url: "/book/az/v2/Git-Alətləri-Reviziya-Seçimi.html"
+aliases:
+- "/book/az/Git-Tools.html"
+- "/book/az/v1/Git-Tools.html"
+- "/book/az/Git-Tools-Revision-Selection.html"
+- "/book/az/v1/Git-Tools-Revision-Selection.html"
 ---
 <p>İndiyə qədər mənbə kodu nəzarəti üçün Git deposunu idarə etməli və ya saxlamağınız lazım olan gündəlik əmrlərin və iş axınlarının çoxunu öyrəndiniz.
 Faylları tracking və committing  əsas tapşırıqlarını yerinə yetirdiniz və quruluş sahəsinin gücünü və yüngül mövzunun branching’ni və birləşməsini istifadə etdiniz.</p><p>İndi Git’in gündəlik olaraq istifadə edə bilməyəcəyiniz, ancaq bir anda ehtiyacınız ola biləcəyi çox güclü şeyləri araşdıracaqsınız.</p>
