--- a/external/book/content/book/az/v2/Git-Alətləri-Stashing-və-Təmizləmə.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Stashing-və-Təmizləmə.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-İşinizin-İmzalanması
 title: Git - Stashing və Təmizləmə
 url: "/book/az/v2/Git-Alətləri-Stashing-və-Təmizləmə.html"
+aliases:
+- "/book/az/Git-Tools-Stashing.html"
+- "/book/az/v1/Git-Tools-Stashing.html"
 ---
 <h2 id="_git_stashing">Stashing və Təmizləmə</h2>
 <div class="paragraph">
