--- a/external/book/content/book/az/v2/Git-Alətləri-Tarixi-Yenidən-Yazmaq.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Tarixi-Yenidən-Yazmaq.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-Reset-Demystified
 title: Git - Tarixi Yenidən Yazmaq
 url: "/book/az/v2/Git-Alətləri-Tarixi-Yenidən-Yazmaq.html"
+aliases:
+- "/book/az/Git-Tools-Rewriting-History.html"
+- "/book/az/v1/Git-Tools-Rewriting-History.html"
 ---
 <h2 id="_rewriting_history">Tarixi Yenidən Yazmaq</h2>
 <div class="paragraph">
