--- a/external/book/content/book/az/v2/Git-Alətləri-İnkişaf-etmiş-Birləşmə.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-İnkişaf-etmiş-Birləşmə.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-Alətləri-Rerere
 title: Git - İnkişaf etmiş Birləşmə
 url: "/book/az/v2/Git-Alətləri-İnkişaf-etmiş-Birləşmə.html"
+aliases:
+- "/book/az/Git-Tools-Subtree-Merging.html"
+- "/book/az/v1/Git-Tools-Subtree-Merging.html"
 ---
 <h2 id="_advanced_merging">İnkişaf etmiş Birləşmə</h2>
 <div class="paragraph">
