--- a/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Git-Müştəri-kimi.html
+++ b/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Git-Müştəri-kimi.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git-və-Digər-Sistemlər-Git’ə-Miqrasiya
 title: Git - Git Müştəri kimi
 url: "/book/az/v2/Git-və-Digər-Sistemlər-Git-Müştəri-kimi.html"
+aliases:
+- "/book/az/Git-and-Other-Systems.html"
+- "/book/az/v1/Git-and-Other-Systems.html"
+- "/book/az/Git-and-Other-Systems-Git-and-Subversion.html"
+- "/book/az/v1/Git-and-Other-Systems-Git-and-Subversion.html"
 ---
 <p>Dünya mükəmməl deyil.
 Ümumiyyətlə, təmasda olduğunuz hər bir layihəni dərhal Git’ə keçirə bilməzsiniz.
