--- a/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Git’ə-Miqrasiya.html
+++ b/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Git’ə-Miqrasiya.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-və-Digər-Sistemlər-Qısa-Məzmun
 title: Git - Git’ə Miqrasiya
 url: "/book/az/v2/Git-və-Digər-Sistemlər-Git’ə-Miqrasiya.html"
+aliases:
+- "/book/az/Git-and-Other-Systems-Migrating-to-Git.html"
+- "/book/az/v1/Git-and-Other-Systems-Migrating-to-Git.html"
 ---
 <h2 id="_migrating">Git’ə Miqrasiya</h2>
 <div class="paragraph">
