--- a/external/book/content/book/az/v2/Git’də-Branch-Branch-İdarəedilməsi.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Branch-İdarəedilməsi.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Branching-İş-Axınları
 title: Git - Branch İdarəedilməsi
 url: "/book/az/v2/Git’də-Branch-Branch-İdarəedilməsi.html"
+aliases:
+- "/book/az/Git-Branching-Branch-Management.html"
+- "/book/az/v1/Git-Branching-Branch-Management.html"
 ---
 <h2 id="_branch_management">Branch İdarəedilməsi</h2>
 <div class="paragraph">
