--- a/external/book/content/book/az/v2/Git’də-Branch-Branching-İş-Axınları.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Branching-İş-Axınları.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Uzaq-Branch’lar
 title: Git - Branching İş Axınları
 url: "/book/az/v2/Git’də-Branch-Branching-İş-Axınları.html"
+aliases:
+- "/book/az/Git-Branching-Branching-Workflows.html"
+- "/book/az/v1/Git-Branching-Branching-Workflows.html"
 ---
 <h2 id="_branching_i̇ş_axınları">Branching İş Axınları</h2>
 <div class="paragraph">
