--- a/external/book/content/book/az/v2/Git’də-Branch-Nutshell’də-Branch’lar.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Nutshell’də-Branch’lar.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git’də-Branch-Sadə-Branching-və-Birləşdirmə
 title: Git - Nutshell’də Branch’lar
 url: "/book/az/v2/Git’də-Branch-Nutshell’də-Branch’lar.html"
+aliases:
+- "/book/az/Git-Branching.html"
+- "/book/az/v1/Git-Branching.html"
+- "/book/az/Git-Branching-What-a-Branch-Is.html"
+- "/book/az/v1/Git-Branching-What-a-Branch-Is.html"
 ---
 <p>
 Demək olar ki, hər bir VNS’nin bir növ branching dəstəyi var.
