--- a/external/book/content/book/az/v2/Git’də-Branch-Rebasing.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Rebasing.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Qısa-Məzmun
 title: Git - Rebasing
 url: "/book/az/v2/Git’də-Branch-Rebasing.html"
+aliases:
+- "/book/az/Git-Branching-Rebasing.html"
+- "/book/az/v1/Git-Branching-Rebasing.html"
 ---
 <h2 id="_rebasing">Rebasing</h2>
 <div class="paragraph">
