--- a/external/book/content/book/az/v2/Git’də-Branch-Uzaq-Branch’lar.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Uzaq-Branch’lar.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Rebasing
 title: Git - Uzaq Branch’lar
 url: "/book/az/v2/Git’də-Branch-Uzaq-Branch’lar.html"
+aliases:
+- "/book/az/Git-Branching-Remote-Branches.html"
+- "/book/az/v1/Git-Branching-Remote-Branches.html"
 ---
 <h2 id="_remote_branches">Uzaq Branch’lar</h2>
 <div class="paragraph">
