--- a/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Atributları.html
+++ b/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Atributları.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’i-Fərdiləşdirmək-Git-Hook’ları
 title: Git - Git Atributları
 url: "/book/az/v2/Git’i-Fərdiləşdirmək-Git-Atributları.html"
+aliases:
+- "/book/az/Customizing-Git-Git-Attributes.html"
+- "/book/az/v1/Customizing-Git-Git-Attributes.html"
 ---
 <h2 id="_git_atributları">Git Atributları</h2>
 <div class="paragraph">
