--- a/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Enforced-Siyasət-Nümunəsi.html
+++ b/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Enforced-Siyasət-Nümunəsi.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’i-Fərdiləşdirmək-Qısa-Məzmun
 title: Git - Git-Enforced Siyasət Nümunəsi
 url: "/book/az/v2/Git’i-Fərdiləşdirmək-Git-Enforced-Siyasət-Nümunəsi.html"
+aliases:
+- "/book/az/Customizing-Git-An-Example-Git-Enforced-Policy.html"
+- "/book/az/v1/Customizing-Git-An-Example-Git-Enforced-Policy.html"
 ---
 <h2 id="_an_example_git_enforced_policy">Git-Enforced Siyasət Nümunəsi</h2>
 <div class="paragraph">
