--- a/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Konfiqurasiyası.html
+++ b/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Konfiqurasiyası.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git’i-Fərdiləşdirmək-Git-Atributları
 title: Git - Git Konfiqurasiyası
 url: "/book/az/v2/Git’i-Fərdiləşdirmək-Git-Konfiqurasiyası.html"
+aliases:
+- "/book/az/Customizing-Git.html"
+- "/book/az/v1/Customizing-Git.html"
+- "/book/az/Customizing-Git-Git-Configuration.html"
+- "/book/az/v1/Customizing-Git-Git-Configuration.html"
 ---
 <p>İndiyə qədər Git’in necə işlədiyini və necə istifadə ediləcəyini izah etdik və asanlıqla və səmərəli istifadə etməyiniz üçün Git’in təqdim etdiyi bir sıra vasitələri təqdim etdik.
 Bu fəsildə bir neçə vacib konfiqurasiya parametrlərini və hook’lar sistemini təqdim edərək Git’i daha çox fərdi qaydada necə işlədə biləcəyinizi görəcəyik.
