--- a/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git-və-Digər-Sistemlər-Git-Müştəri-kimi
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git’i-Fərdiləşdirmək-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Customizing-Git-Summary.html"
+- "/book/az/v1/Customizing-Git-Summary.html"
 ---
 <h2 id="_qısa_məzmun_8">Qısa Məzmun</h2>
 <div class="paragraph">
