--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Git-Referansları.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Git-Referansları.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Packfile’lar
 title: Git - Git Referansları
 url: "/book/az/v2/Git’in-Daxili-İşləri-Git-Referansları.html"
+aliases:
+- "/book/az/Git-Internals-Git-References.html"
+- "/book/az/v1/Git-Internals-Git-References.html"
 ---
 <h2 id="_git_refs">Git Referansları</h2>
 <div class="paragraph">
