--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Maintenance-və-Məlumatların-Bərpası.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Maintenance-və-Məlumatların-Bərpası.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Mühit-Dəyişənləri
 title: Git - Maintenance və Məlumatların Bərpası
 url: "/book/az/v2/Git’in-Daxili-İşləri-Maintenance-və-Məlumatların-Bərpası.html"
+aliases:
+- "/book/az/Git-Internals-Maintenance-and-Data-Recovery.html"
+- "/book/az/v1/Git-Internals-Maintenance-and-Data-Recovery.html"
 ---
 <h2 id="_maintenance_və_məlumatların_bərpası">Maintenance və Məlumatların Bərpası</h2>
 <div class="paragraph">
