--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Packfile’lar.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Packfile’lar.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Refspec
 title: Git - Packfile’lar
 url: "/book/az/v2/Git’in-Daxili-İşləri-Packfile’lar.html"
+aliases:
+- "/book/az/Git-Internals-Packfiles.html"
+- "/book/az/v1/Git-Internals-Packfiles.html"
 ---
 <h2 id="_packfilelar">Packfile’lar</h2>
 <div class="paragraph">
