--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Plumbing-və-Porcelain.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Plumbing-və-Porcelain.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Git-Obyektləri
 title: Git - Plumbing və Porcelain
 url: "/book/az/v2/Git’in-Daxili-İşləri-Plumbing-və-Porcelain.html"
+aliases:
+- "/book/az/Git-Internals.html"
+- "/book/az/v1/Git-Internals.html"
+- "/book/az/Git-Internals-Plumbing-and-Porcelain.html"
+- "/book/az/v1/Git-Internals-Plumbing-and-Porcelain.html"
 ---
 <p>Bu fəslə daha əvvəlki bir fəsildən keçib gəlmiş ola bilərsiz və ya bütün kitabı bu vaxta qədər ardıcıl oxuduqdan sonra buraya gəlmiş ola bilərsiz - hər iki halda da Git’in daxili işlərini və tətbiqini nəzərdən keçirəcəyik.
 Bu məlumatları başa düşməyin Git’in nə qədər faydalı və güclü olduğunu qiymətləndirmək üçün nə qədər vacib olduğunu gördük, lakin başqaları bunun yeni başlayanlar üçün qarışıq və lazımsız dərəcədə mürəkkəb ola biləcəyini iddia edirlər.
