--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Refspec.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Transfer-Protokolları
 title: Git - Refspec
 url: "/book/az/v2/Git’in-Daxili-İşləri-Refspec.html"
+aliases:
+- "/book/az/Git-Internals-The-Refspec.html"
+- "/book/az/v1/Git-Internals-The-Refspec.html"
 ---
 <h2 id="_refspec">Refspec</h2>
 <div class="paragraph">
