--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Transfer-Protokolları.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Transfer-Protokolları.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Maintenance-və-Məlumatların-Bərpası
 title: Git - Transfer Protokolları
 url: "/book/az/v2/Git’in-Daxili-İşləri-Transfer-Protokolları.html"
+aliases:
+- "/book/az/Git-Internals-Transfer-Protocols.html"
+- "/book/az/v1/Git-Internals-Transfer-Protocols.html"
 ---
 <h2 id="_transfer_protokolları">Transfer Protokolları</h2>
 <div class="paragraph">
