--- a/external/book/content/book/az/v2/Git’in-Əsasları-Commit-Tarixçəsinə-Baxış.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Commit-Tarixçəsinə-Baxış.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Ləğv-Edilən-İşlər-Geri-qaytarılan
 title: Git - Commit  Tarixçəsinə Baxış
 url: "/book/az/v2/Git’in-Əsasları-Commit-Tarixçəsinə-Baxış.html"
+aliases:
+- "/book/az/Git-Basics-Viewing-the-Commit-History.html"
+- "/book/az/v1/Git-Basics-Viewing-the-Commit-History.html"
 ---
 <h2 id="_viewing_history">Commit  Tarixçəsinə Baxış</h2>
 <div class="paragraph">
