--- a/external/book/content/book/az/v2/Git’in-Əsasları-Depoda-Dəyişikliklərin-Qeyd-Edilməsi.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Depoda-Dəyişikliklərin-Qeyd-Edilməsi.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Commit-Tarixçəsinə-Baxış
 title: Git - Depoda Dəyişikliklərin Qeyd  Edilməsi
 url: "/book/az/v2/Git’in-Əsasları-Depoda-Dəyişikliklərin-Qeyd-Edilməsi.html"
+aliases:
+- "/book/az/Git-Basics-Recording-Changes-to-the-Repository.html"
+- "/book/az/v1/Git-Basics-Recording-Changes-to-the-Repository.html"
 ---
 <h2 id="_depoda_dəyişikliklərin_qeyd_edilməsi">Depoda Dəyişikliklərin Qeyd  Edilməsi</h2>
 <div class="paragraph">
