--- a/external/book/content/book/az/v2/Git’in-Əsasları-Etiketləmə.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Etiketləmə.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Git-Alias’lar
 title: Git - Etiketləmə
 url: "/book/az/v2/Git’in-Əsasları-Etiketləmə.html"
+aliases:
+- "/book/az/Git-Basics-Tagging.html"
+- "/book/az/v1/Git-Basics-Tagging.html"
 ---
 <h2 id="_git_tagging">Etiketləmə</h2>
 <div class="paragraph">
