--- a/external/book/content/book/az/v2/Git’in-Əsasları-Git-Alias’lar.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Git-Alias’lar.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Qısa-Məzmun
 title: Git - Git Alias’lar
 url: "/book/az/v2/Git’in-Əsasları-Git-Alias’lar.html"
+aliases:
+- "/book/az/Git-Basics-Tips-and-Tricks.html"
+- "/book/az/v1/Git-Basics-Tips-and-Tricks.html"
 ---
 <h2 id="_git_aliases">Git Alias’lar</h2>
 <div class="paragraph">
