--- a/external/book/content/book/az/v2/Git’in-Əsasları-Git-Deposunun-Əldə-Edilməsi.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Git-Deposunun-Əldə-Edilməsi.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Git’in-Əsasları-Depoda-Dəyişikliklərin-Qeyd-Edilməsi
 title: Git - Git Deposunun Əldə Edilməsi
 url: "/book/az/v2/Git’in-Əsasları-Git-Deposunun-Əldə-Edilməsi.html"
+aliases:
+- "/book/az/Git-Basics.html"
+- "/book/az/v1/Git-Basics.html"
+- "/book/az/Git-Basics-Getting-a-Git-Repository.html"
+- "/book/az/v1/Git-Basics-Getting-a-Git-Repository.html"
 ---
 <p>Git ilə dəvam edə bilmək üçün yalnız bir fəsil oxuya bilsəniz, o bu fəsildir.
 Bu fəsildə vaxtınızı Git ilə birlikdə keçirməyə sərf edəcəyiniz işlərin böyük əksəriyyətini yerinə yetirmək üçün lazım olan hər bir əsas əmri əhatə edir.
