--- a/external/book/content/book/az/v2/Git’in-Əsasları-Ləğv-Edilən-İşlər-Geri-qaytarılan.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Ləğv-Edilən-İşlər-Geri-qaytarılan.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Uzaqdan-İşləmək
 title: Git - Ləğv Edilən İşlər (Geri qaytarılan)
 url: "/book/az/v2/Git’in-Əsasları-Ləğv-Edilən-İşlər-Geri-qaytarılan.html"
+aliases:
+- "/book/az/Git-Basics-Undoing-Things.html"
+- "/book/az/v1/Git-Basics-Undoing-Things.html"
 ---
 <h2 id="_undoing">Ləğv Edilən İşlər (Geri qaytarılan)</h2>
 <div class="paragraph">
