--- a/external/book/content/book/az/v2/Git’in-Əsasları-Uzaqdan-İşləmək.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Uzaqdan-İşləmək.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Etiketləmə
 title: Git - Uzaqdan İşləmək
 url: "/book/az/v2/Git’in-Əsasları-Uzaqdan-İşləmək.html"
+aliases:
+- "/book/az/Git-Basics-Working-with-Remotes.html"
+- "/book/az/v1/Git-Basics-Working-with-Remotes.html"
 ---
 <h2 id="_remote_repos">Uzaqdan İşləmək</h2>
 <div class="paragraph">
