--- a/external/book/content/book/az/v2/Paylanmış-Git-Distribyutorluq-İş-Axınları.html
+++ b/external/book/content/book/az/v2/Paylanmış-Git-Distribyutorluq-İş-Axınları.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Paylanmış-Git-Layihəyə-Töhfə-vermək
 title: Git - Distribyutorluq İş Axınları
 url: "/book/az/v2/Paylanmış-Git-Distribyutorluq-İş-Axınları.html"
+aliases:
+- "/book/az/Distributed-Git.html"
+- "/book/az/v1/Distributed-Git.html"
+- "/book/az/Distributed-Git-Distributed-Workflows.html"
+- "/book/az/v1/Distributed-Git-Distributed-Workflows.html"
 ---
 <p>
 Artıq bütün developer’lərin kodlarını paylaşması üçün mərkəz nöqtəsi olaraq qurulmuş remote bir Git deposuna sahib olduğunuzdan və lokal iş axınındakı əsas Git əmrləri ilə tanış olduğunuza görə bəzi paylanmış iş axınlarından necə istifadə edəcəyinizə baxacaqsınız.</p><p>Bu fəsildə paylayıcı və inteqrasiyaedici olaraq paylanmış bir mühitdə Git ilə necə işləməli olduğunuzu görəcəksiniz.
