--- a/external/book/content/book/az/v2/Paylanmış-Git-Layihənin-Saxlanılması.html
+++ b/external/book/content/book/az/v2/Paylanmış-Git-Layihənin-Saxlanılması.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Paylanmış-Git-Qısa-Məzmun
 title: Git - Layihənin Saxlanılması
 url: "/book/az/v2/Paylanmış-Git-Layihənin-Saxlanılması.html"
+aliases:
+- "/book/az/Distributed-Git-Maintaining-a-Project.html"
+- "/book/az/v1/Distributed-Git-Maintaining-a-Project.html"
 ---
 <h2 id="_layihənin_saxlanılması">Layihənin Saxlanılması</h2>
 <div class="paragraph">
