--- a/external/book/content/book/az/v2/Paylanmış-Git-Layihəyə-Töhfə-vermək.html
+++ b/external/book/content/book/az/v2/Paylanmış-Git-Layihəyə-Töhfə-vermək.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Paylanmış-Git-Layihənin-Saxlanılması
 title: Git - Layihəyə Töhfə vermək
 url: "/book/az/v2/Paylanmış-Git-Layihəyə-Töhfə-vermək.html"
+aliases:
+- "/book/az/Distributed-Git-Contributing-to-a-Project.html"
+- "/book/az/v1/Distributed-Git-Contributing-to-a-Project.html"
 ---
 <h2 id="_contributing_project">Layihəyə Töhfə vermək</h2>
 <div class="paragraph">
