--- a/external/book/content/book/az/v2/Server’də-Git-Git-Daemon.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Git-Daemon.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Server’də-Git-Smart-HTTP
 title: Git - Git Daemon
 url: "/book/az/v2/Server’də-Git-Git-Daemon.html"
+aliases:
+- "/book/az/Git-on-the-Server-Git-Daemon.html"
+- "/book/az/v1/Git-on-the-Server-Git-Daemon.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
