--- a/external/book/content/book/az/v2/Server’də-Git-Protokollar.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Protokollar.html
@@ -17,6 +17,11 @@ book:
     next: book/az/v2/Server’də-Git-Serverdə-Git-Əldə-Etmək
 title: Git - Protokollar
 url: "/book/az/v2/Server’də-Git-Protokollar.html"
+aliases:
+- "/book/az/Git-on-the-Server.html"
+- "/book/az/v1/Git-on-the-Server.html"
+- "/book/az/Git-on-the-Server-The-Protocols.html"
+- "/book/az/v1/Git-on-the-Server-The-Protocols.html"
 ---
 <p>
 Bu nöqtədə Git’i istifadə edəcəyiniz gündəlik vəzifələrin çoxunu edə bilməlisiniz.
