--- a/external/book/content/book/az/v2/Server’də-Git-Server-qurmaq.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Server-qurmaq.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Server’də-Git-Git-Daemon
 title: Git - Server qurmaq
 url: "/book/az/v2/Server’də-Git-Server-qurmaq.html"
+aliases:
+- "/book/az/Git-on-the-Server-Setting-Up-the-Server.html"
+- "/book/az/v1/Git-on-the-Server-Setting-Up-the-Server.html"
 ---
 <h2 id="_setting_up_server">Server qurmaq</h2>
 <div class="paragraph">
