--- a/external/book/content/book/az/v2/Server’də-Git-Serverdə-Git-Əldə-Etmək.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Serverdə-Git-Əldə-Etmək.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Server’də-Git-Sizin-öz-SSH-Public-Key’nizi-yaratmaq
 title: Git - Serverdə Git Əldə Etmək
 url: "/book/az/v2/Server’də-Git-Serverdə-Git-Əldə-Etmək.html"
+aliases:
+- "/book/az/Git-on-the-Server-Getting-Git-on-a-Server.html"
+- "/book/az/v1/Git-on-the-Server-Getting-Git-on-a-Server.html"
 ---
 <h2 id="_getting_git_on_a_server">Serverdə Git Əldə Etmək</h2>
 <div class="paragraph">
