--- a/external/book/content/book/az/v2/Server’də-Git-Sizin-öz-SSH-Public-Key’nizi-yaratmaq.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Sizin-öz-SSH-Public-Key’nizi-yaratmaq.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Server’də-Git-Server-qurmaq
 title: Git - Sizin öz SSH Public Key’nizi yaratmaq
 url: "/book/az/v2/Server’də-Git-Sizin-öz-SSH-Public-Key’nizi-yaratmaq.html"
+aliases:
+- "/book/az/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
+- "/book/az/v1/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
 ---
 <h2 id="_generate_ssh_key">Sizin öz SSH Public Key’nizi yaratmaq</h2>
 <div class="paragraph">
