--- a/external/book/content/book/az/v2/Server’də-Git-Üçüncü-Tərəf-Seçimləri.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Üçüncü-Tərəf-Seçimləri.html
@@ -17,6 +17,17 @@ book:
     next: book/az/v2/Server’də-Git-Qısa-Məzmun
 title: Git - Üçüncü Tərəf Seçimləri
 url: "/book/az/v2/Server’də-Git-Üçüncü-Tərəf-Seçimləri.html"
+aliases:
+- "/book/az/Git-on-the-Server-Public-Access.html"
+- "/book/az/v1/Git-on-the-Server-Public-Access.html"
+- "/book/az/Git-on-the-Server-GitWeb.html"
+- "/book/az/v1/Git-on-the-Server-GitWeb.html"
+- "/book/az/Git-on-the-Server-Gitosis.html"
+- "/book/az/v1/Git-on-the-Server-Gitosis.html"
+- "/book/az/Git-on-the-Server-Gitolite.html"
+- "/book/az/v1/Git-on-the-Server-Gitolite.html"
+- "/book/az/Git-on-the-Server-Hosted-Git.html"
+- "/book/az/v1/Git-on-the-Server-Hosted-Git.html"
 ---
 <h2 id="_üçüncü_tərəf_seçimləri">Üçüncü Tərəf Seçimləri</h2>
 <div class="paragraph">
