--- a/external/book/content/book/az/v2/_index.html
+++ b/external/book/content/book/az/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/az/v2.html"
 aliases:
 - "/book/az/v2/index.html"
+- "/book/az/v1/index.html"
 - "/book/az/index.html"
 ---
