--- a/external/book/content/book/az/v2/Başlanğıc-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Başlanğıc-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Əsasları-Git-Deposunun-Əldə-Edilməsi
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Başlanğıc-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Başlanğıc-Summary.html"
+- "/book/az/v1/Başlanğıc-Summary.html"
 ---
 <h2 id="_qısa_məzmun">Qısa Məzmun</h2>
 <div class="paragraph">
