--- a/external/book/content/book/az/v2/Git-Alətləri-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git-Alətləri-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’i-Fərdiləşdirmək-Git-Konfiqurasiyası
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git-Alətləri-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-Tools-Summary.html"
+- "/book/az/v1/Git-Tools-Summary.html"
 ---
 <h2 id="_qısa_məzmun_7">Qısa Məzmun</h2>
 <div class="paragraph">
