--- a/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git-və-Digər-Sistemlər-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Plumbing-və-Porcelain
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git-və-Digər-Sistemlər-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-and-Other-Systems-Summary.html"
+- "/book/az/v1/Git-and-Other-Systems-Summary.html"
 ---
 <h2 id="_qısa_məzmun_10">Qısa Məzmun</h2>
 <div class="paragraph">
