--- a/external/book/content/book/az/v2/Git’də-Branch-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Server’də-Git-Protokollar
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git’də-Branch-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-Branching-Summary.html"
+- "/book/az/v1/Git-Branching-Summary.html"
 ---
 <h2 id="_qısa_məzmun_3">Qısa Məzmun</h2>
 <div class="paragraph">
