--- a/external/book/content/book/az/v2/Git’də-Branch-Sadə-Branching-və-Birləşdirmə.html
+++ b/external/book/content/book/az/v2/Git’də-Branch-Sadə-Branching-və-Birləşdirmə.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Branch-İdarəedilməsi
 title: Git - Sadə Branching və Birləşdirmə
 url: "/book/az/v2/Git’də-Branch-Sadə-Branching-və-Birləşdirmə.html"
+aliases:
+- "/book/az/Git-Branching-Basic-Branching-and-Merging.html"
+- "/book/az/v1/Git-Branching-Basic-Branching-and-Merging.html"
 ---
 <h2 id="_sadə_branching_və_birləşdirmə">Sadə Branching və Birləşdirmə</h2>
 <div class="paragraph">
