--- a/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Hook’ları.html
+++ b/external/book/content/book/az/v2/Git’i-Fərdiləşdirmək-Git-Hook’ları.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’i-Fərdiləşdirmək-Git-Enforced-Siyasət-Nümunəsi
 title: Git - Git Hook’ları
 url: "/book/az/v2/Git’i-Fərdiləşdirmək-Git-Hook’ları.html"
+aliases:
+- "/book/az/Customizing-Git-Git-Hooks.html"
+- "/book/az/v1/Customizing-Git-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Hook’ları</h2>
 <div class="paragraph">
