--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Git-Obyektləri.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Git-Obyektləri.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’in-Daxili-İşləri-Git-Referansları
 title: Git - Git Obyektləri
 url: "/book/az/v2/Git’in-Daxili-İşləri-Git-Obyektləri.html"
+aliases:
+- "/book/az/Git-Internals-Git-Objects.html"
+- "/book/az/v1/Git-Internals-Git-Objects.html"
 ---
 <h2 id="_objects">Git Obyektləri</h2>
 <div class="paragraph">
