--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Appendix-A:-Digər-Mühitlərdə-Git-Qrafik-interfeyslər
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git’in-Daxili-İşləri-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-Internals-Summary.html"
+- "/book/az/v1/Git-Internals-Summary.html"
 ---
 <h2 id="_qısa_məzmun_11">Qısa Məzmun</h2>
 <div class="paragraph">
