--- a/external/book/content/book/az/v2/Git’in-Əsasları-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Git’in-Əsasları-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Git’də-Branch-Nutshell’də-Branch’lar
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Git’in-Əsasları-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-Basics-Summary.html"
+- "/book/az/v1/Git-Basics-Summary.html"
 ---
 <h2 id="_qısa_məzmun_2">Qısa Məzmun</h2>
 <div class="paragraph">
