--- a/external/book/content/book/az/v2/Paylanmış-Git-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Paylanmış-Git-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/GitHub-Hesab-Qurma-və-Konfiqurasiya
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Paylanmış-Git-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Distributed-Git-Summary.html"
+- "/book/az/v1/Distributed-Git-Summary.html"
 ---
 <h2 id="_qısa_məzmun_5">Qısa Məzmun</h2>
 <div class="paragraph">
