--- a/external/book/content/book/az/v2/Server’də-Git-Qısa-Məzmun.html
+++ b/external/book/content/book/az/v2/Server’də-Git-Qısa-Məzmun.html
@@ -17,6 +17,9 @@ book:
     next: book/az/v2/Paylanmış-Git-Distribyutorluq-İş-Axınları
 title: Git - Qısa Məzmun
 url: "/book/az/v2/Server’də-Git-Qısa-Məzmun.html"
+aliases:
+- "/book/az/Git-on-the-Server-Summary.html"
+- "/book/az/v1/Git-on-the-Server-Summary.html"
 ---
 <h2 id="_qısa_məzmun_4">Qısa Məzmun</h2>
 <div class="paragraph">
